# text-summarizer-api

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  README.md  azure-pipelines.yml  deploy-api-on-kubernetes.yaml  dev_notebook.ipynb  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: kpis.py  main.py
docs/: DefaultApi.md  FullMessage.md  Message.md  ResponseMessage.md  dataframejson.md
