[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "dot-edge"
version = "0.1.0"
description = "DOT Edge Compute 1"
authors = [
  "Michel Vorsprach <michel.vorsprach@basf.com>",
  "Marco Klaus Jaeger <Marco Klaus Jaeger>",
  "Robert Pack <robert.pack@basf.com>"
]
readme = "README.md"
packages = [
  { include = "dot" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
pandas = "^1.1.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pyarrow = "^1.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^20.8b0"
flake8 = "^3.7.9"
flake8-bugbear = "^19.8.0"
flake8-pyi = "^19.3.0"
flake8-typing-imports = "^1.7.0"
pre-commit = "^1.21.0"
pytest = "5.3.2"
pytest-datadir = "^1.3.0"
pytest-cov = "^2.7.1"
pytest-azurepipelines = ">=0.8.0"
python-dotenv = {version = "^0.10.3", extras = ["CLI"]}
pytest-dotenv = "^0.5.2"
